# reactive

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  download.py  setup_build.bat  vcpkg.json
.github/workflows/: build.yml
asset/: bunny_and_teapot.mtl
asset/CornellBox/: CornellBox-Glossy.mtl
asset/viking_room/: viking_room.mtl
include/reactive/: App.hpp  Window.hpp  common.hpp  math.hpp  pch.h  reactive.hpp
include/reactive/Compiler/: Compiler.hpp
include/reactive/Graphics/: Accel.hpp  ArrayProxy.hpp  Buffer.hpp  CommandBuffer.hpp  Context.hpp  DescriptorSet.hpp  Fence.hpp  Geometry.hpp  Image.hpp  Pipeline.hpp  RenderPass.hpp  Shader.hpp  Swapchain.hpp
include/reactive/Scene/: AABB.hpp  Camera.hpp  Frustum.hpp  Loader.hpp  Mesh.hpp  Object.hpp
include/reactive/Timer/: CPUTimer.hpp  GPUTimer.hpp
sample/editor/: AssetWindow.hpp  AttributeWindow.hpp  CMakeLists.txt  IconManager.hpp  RenderWindow.hpp  Scene.hpp  SceneWindow.hpp  ViewportWindow.hpp  main.cpp
sample/editor/shader/: base.rchit  base.rgen  base.rmiss  color.glsl  random.glsl  share.h
sample/hello_compute/: CMakeLists.txt  main.cpp
sample/hello_compute/shader/: hello_compute.comp  shaders.slang
sample/hello_graphics/: CMakeLists.txt  main.cpp  shaders.slang
sample/hello_graphics/shader/: hello_graphics.frag  hello_graphics.vert
sample/hello_mesh_shader/: CMakeLists.txt  main.cpp  shaders.slang
sample/hello_raytracing/: CMakeLists.txt  main.cpp  shaders.slang
sample/hello_raytracing/shader/: hello_raytracing.rchit  hello_raytracing.rgen  hello_raytracing.rmiss  shaders.slang
sample/hello_shader_object/: CMakeLists.txt  main.cpp
sample/light_field/: CMakeLists.txt  main.cpp
sample/light_field/shader/: light_field.comp  light_field.rchit  light_field.rgen  light_field.rmiss
sample/restir/: CMakeLists.txt  Pipeline.cpp  Pipeline.hpp  main.cpp
sample/restir/shader/: common.glsl  random.glsl
sample/restir/shader/gbuffer/: common.glsl  gbuffer.rchit  gbuffer.rgen  gbuffer.rmiss
sample/restir/shader/restir/: init_resev.rgen  shading.rgen  spatial_reuse.rgen  temporal_reuse.rgen
sample/restir/shader/shadow_ray/: shadow_ray.rchit  shadow_ray.rmiss
sample/restir/shader/uniform_light/: uniform_light.rgen
sample/restir/shader/wrs/: wrs.rgen
sample/restir/share/: structure.glsl
sample/slang/: CMakeLists.txt  main.cpp
sample/slang/shader/: shaders.slang
shader/: pathtracing.rchit  simple.comp
shader/denoise/: mean.comp  median.comp
shader/gbuffer/: common.glsl  gbuffer.rchit  gbuffer.rgen  gbuffer.rmiss
shader/hello_raytracing/: hello_raytracing.rchit  hello_raytracing.rgen  hello_raytracing.rmiss
shader/pathtracing/: common.glsl  compile.bat  nee.rchit  nee.rgen  pathtracing.rchit  pathtracing.rchit.spv  pathtracing.rgen  pathtracing.rgen.spv  pathtracing.rmiss  pathtracing.rmiss.spv  streaming_ris.rchit
shader/ray_align/: common.glsl  ray_align.rahit  ray_align.rchit  ray_align.rgen  ray_align.rmiss
shader/restir/: common.glsl  init_reservoir.rchit  init_reservoir.rgen  init_reservoir.rmiss  init_resev.rgen  reservoir.glsl  restir.rchit  reuse.rgen  reuse_resev.rgen  shading.rchit  shading.rgen  shading.rmiss  shadow_ray.rchit  spatial_reuse.rgen  temporal_reuse.rgen
shader/shadow_ray/: shadow_ray.rchit  shadow_ray.rmiss
shader/texture/: texture.rchit  texture.rgen
shader/uniform_light/: common.glsl  uniform_light.rchit  uniform_light.rgen  uniform_light.rmiss
shader/wrs/: common.glsl  wrs.rgen
share/: structure.inc
source/: Accel.cpp  Accel.hpp  App.cpp  App.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Compiler.cpp  Compiler.hpp  Engine.cpp  Engine.hpp  GUI.cpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Light.hpp  Loader.cpp  Loader.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Pipeline.cpp  Pipeline.hpp  Scene.cpp  Scene.hpp  Timer.hpp  UI.cpp  UI.hpp  Vulkan.cpp  Vulkan.hpp  Window.cpp  Window.hpp  common.hpp  main.cpp  pch.h
source/Compiler/: Compiler.cpp  Compiler.hpp
source/GUI/: GUI.cpp  GUI.hpp  imgui_impl_vulkan_hpp.cpp  imgui_impl_vulkan_hpp.h
source/Graphics/: Accel.cpp  Accel.hpp  ArrayProxy.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Context.cpp  Context.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.hpp  Framebuffer.hpp  Geometry.cpp  Geometry.hpp  Graphics.cpp  Graphics.hpp  Helper.cpp  Helper.hpp  Image.cpp  Image.hpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  WriteDescriptorSet.hpp
source/Scene/: AABB.hpp  Camera.cpp  Camera.hpp  Frustum.hpp  Light.hpp  Loader.cpp  Loader.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
source/Timer/: GPUTimer.cpp  GPUTimer.hpp
source/Vulkan/: Accel.cpp  Accel.hpp  Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Geometry.cpp  Geometry.hpp  Helper.cpp  Helper.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  Swapchain.cpp  Swapchain.hpp  Vulkan.cpp  Vulkan.hpp  WriteDescriptorSet.cpp
source/Window/: Window.cpp  Window.hpp
src/: App.cpp  Window.cpp
src/Compiler/: Compiler.cpp
src/Graphics/: Accel.cpp  Buffer.cpp  CommandBuffer.cpp  Context.cpp  DescriptorSet.cpp  Fence.cpp  Geometry.cpp  Image.cpp  Pipeline.cpp  Shader.cpp  Swapchain.cpp
src/Scene/: Camera.cpp  Loader.cpp  Mesh.cpp  Object.cpp
src/Timer/: GPUTimer.cpp
